# agentic-development-framework

./: .gitignore  README.md  coordinator-contract.md  pyproject.toml
agents/opencode/: context-broker.md  git-operator.md  intake.md  orchestrator.md  packetizer.md  planner.md  policy.md  reviewer.md  roadmap.md
docs/agents/: agent-contract.md
docs/governance/: agnostic-dry-run-design-and-evidence.md  builder-runtime-extraction-strategy.md  candidate-mode-plan.md  extraction-handoff.md  implementation-protocol.md  m5-remaining-schema-audit.md  minimal-builder-invocation-runtime-strategy.md
docs/governance/assessments/: m9-1-repository-map-assessment.md  m9-3-code-runtime-schema-assessment.md  (+3 more)
schemas/meta/: context_bundle.schema.json  decisions.schema.json  framework_state.schema.json  git_operation.schema.json  implementation_report.schema.json  intent.schema.json  plan.schema.json  policy_constraints.schema.json  review_report.schema.json  roadmap_slice.schema.json  schema_catalog.schema.json  task_packet.schema.json  test_report.schema.json
src/agentic_development_framework/: __init__.py
tests/: test_build_context_bundle.py  test_build_decisions.py  test_build_framework_state.py  test_build_git_operation.py  test_build_implementation_report.py  test_build_intent.py  test_build_plan.py  test_build_policy_constraints.py  test_build_review_report.py  test_build_roadmap_slice.py  test_build_schema_catalog.py  test_build_task_packet.py  test_build_test_report.py  test_meta_schemas.py  test_package_import.py  test_runtime_dry_run.py  test_runtime_invocation.py
(+16 files in other folders)
